Import of MRGRIPH/Archive-Any-Plugin-Rar-0.02 from CPAN.
gitpan-cpan-distribution: Archive-Any-Plugin-Rar
gitpan-cpan-version:      0.02
gitpan-cpan-path:         MRGRIPH/Archive-Any-Plugin-Rar-0.02.tar.gz
gitpan-cpan-author:       MRGRIPH
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -13,6 +13,10 @@ AUTHOR
 ACKNOWLEDGEMENTS
     Thanks to Clint Moore for Archive::Any
 
+    Thanks to "<d_ion at mail.ru>" for minor fix
+
+    Thanks to "<ksuri at cpan.org>" for major fix
+
 COPYRIGHT & LICENSE
     Copyright 2010 Dmitriy V. Simonov.
 
